--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             </div>
             <nav>
                 <ul id='MenuItems'>
-                    <li><a href='project_1project 1.1.html'>Home</a></li>
-                    <li><a href='q2-w2.1challenge 8.2.html'>Portfolio</a></li>
-                    <li><a href='image1.html'>Images</a></li>
-                    <li><a href='myresume.html'>Contact</a></li>
+                    <li><a href='pro.html'>Home</a></li>
+                    <li><a href='cha8.2.tml'>Portfolio</a></li>
+                    <li><a href='img1.html'>Images</a></li>
+                    <li><a href='res.html'>Contact</a></li>
                     <li><button class='loginbtn' onclick="document.getElementById('login-           form').style.display='block'" style="width:auto;">Login</button></li>
                 </ul>
             </nav>
